--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <div class="h5 mb-1">Web Application Developer <span class="text-muted h6">at Agartha Technology</span></div>
+          <div class="text-muted text-small mb-2">Jan, 2021 - Present</div>
+          <div>Work as a member of a team that develops microservices project for a logistics company. Project architecture is Entity Framework with MSSQL and MongoDB.</div>
+        </div>
+      </div>
+      <div class="timeline-card timeline-card-primary card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">Web Application Developer <span class="text-muted h6">at Agartha Technology</span></div>
           <div class="text-muted text-small mb-2">Feb, 2020 - Jul, 2021</div>
           <div>Work as a member of a team that develops Entity Resources Planning (ERP) Project for a government agecy. We use LLBLGen for ORM tool and use Telerik Kendo-UI for frontend development. Project architecture is MVC. Besides Telerik Reporting Service and MSSQL/PostgreSQL are used for this project</div>
         </div>
