--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Eray Fırat</h2>
-        <p data-aos="fade-left" data-aos-delay="100">Web Developer</p>
+        <p data-aos="fade-left" data-aos-delay="100">Software Engineer</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200">
 		<a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="right-resume.pdf" target="_blank">Download CV</a>
 		<!--<a class="btn btn-success shadow-sm mt-1" href="#contact">Hire Me</a>-->
@@ -146,15 +146,15 @@
     <div class="timeline">
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Web Application Developer <span class="text-muted h6">at Agartha Technology</span></div>
-          <div class="text-muted text-small mb-2">Jan, 2021 - Present</div>
+          <div class="h5 mb-1">Backend Developer <span class="text-muted h6">at Overtech Technology</span></div>
+          <div class="text-muted text-small mb-2">Jan, 2022 - Present</div>
           <div>Work as a member of a team that develops microservices project for a logistics company. Project architecture is Entity Framework with MSSQL and MongoDB.</div>
         </div>
       </div>
       <div class="timeline-card timeline-card-primary card shadow-sm">
         <div class="card-body">
           <div class="h5 mb-1">Web Application Developer <span class="text-muted h6">at Agartha Technology</span></div>
-          <div class="text-muted text-small mb-2">Feb, 2020 - Jul, 2021</div>
+          <div class="text-muted text-small mb-2">Feb, 2020 - Nov, 2021</div>
           <div>Work as a member of a team that develops Entity Resources Planning (ERP) Project for a government agecy. We use LLBLGen for ORM tool and use Telerik Kendo-UI for frontend development. Project architecture is MVC. Besides Telerik Reporting Service and MSSQL/PostgreSQL are used for this project</div>
         </div>
       </div>
